2001-05-03  Akim Demaille  <akim@epita.fr>

	Case insensitive FS choke on Automake/ vs automake.
	Reported by Tim Van Holder.

	* Automake/: Move in...
	* lib/: this new directory.

2001-05-03  Raja R Harinath  <harinath@cs.umn.edu>

	* data.am (install-%DIR%%PRIMARY%): Execute the same command as
	echoed.

2001-04-30  Jim Meyering  <meyering@lucent.com>

	* automake.in: Remove `/lib' from include directory.

2001-04-27  Akim Demaille  <akim@epita.fr>

	AM_INIT_AUTOMAKE is no longer optional.

	* automake.in ($seen_make_set, $seen_prog_install)
	($seen_arg_prog): Remove.
	(&handle_programs, &handle_scripts, &scan_one_autoconf_file):
	Remove related code.

2001-04-27  Akim Demaille  <akim@epita.fr>

	* tests/specflags4.test, tests/specflags5.test: Remove, merged
	into...
	* tests/specflags3.test: here.

2001-04-27  Akim Demaille  <akim@epita.fr>

	* automake.in ($seen_path_xtra): Remove.
	(&handle_compile): Don't handle `AC_PATH_XTRA' AC_SUBST variables.
	(&scan_one_autoconf_file): Do it, instead of setting $seen_path_xtra.

2001-04-27  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents_internal): Declare it.

2001-04-27  Akim Demaille  <akim@epita.fr>

	* automake.in (&read_am_file, &file_contents_internal): Don't
	define macros when `FALSE', to avoid errors on doubly defined
	variables but under condition `FALSE'.  In order to allow...
	(&am_install_var): When reading the associated file for the first
	time, enable `%?FIRST%'.
	(&handle_libraries): Let libs.am define $(AR) and $(RANLIB).
	* libs.am: Do it when `%?FIRST%'.

2001-04-27  Akim Demaille  <akim@epita.fr>

	* automake.in (handle_compile): Let ansi2knr.am define $(ANSI2KNR).
	* ansi2knr.am: Do it.
	Prefer `if %?FOO%' to `if %!FOO%'.

2001-04-27  Akim Demaille  <akim@epita.fr>

	* automake.in (&register_language, &finish_languages): Use `pure'
	as a Boolean.
	(&register_language): Use %done properly with objects, not names.
	(&finish_languages): Replace `$non_c' with `$needs_c'.
