@@ -81,6 +81,7 @@ my $VERSION = "@VERSION@";
 my $PACKAGE = "@PACKAGE@";
 my $prefix = "@prefix@";
 my $am_dir = "@datadir@/@PACKAGE@/am";
+my $pkgdata_dir = "@datadir@/@PACKAGE@";
 
 # String constants.
 my $IGNORE_PATTERN = '^##([^#].*)?$';
@@ -7457,7 +7458,7 @@ sub require_file_internal
 			$suppress = 0;
 			$trailer = "; cannot run `libtoolize': $!";
 		    }
-		    elsif (-f ($am_dir . '/' . $file))
+		    elsif (-f ("$pkgdata_dir/$file"))
 		    {
 			# Install the missing file.  Symlink if we
 			# can, copy if we must.  Note: delete the file
@@ -7468,13 +7469,13 @@ sub require_file_internal
 			unlink ($errfile) if -f $errfile;
 			if ($symlink_exists && ! $copy_missing)
 			{
-			    if (! symlink ($am_dir . '/' . $file, $errfile))
+			    if (! symlink ("$pkgdata_dir/$file", $errfile))
 			    {
 				$suppress = 0;
 				$trailer = "; error while making link: $!";
 			    }
 			}
-			elsif (system ('cp', $am_dir . '/' . $file, $errfile))
+			elsif (system ('cp', "$pkgdata_dir/$file", $errfile))
 			{
 			    $suppress = 0;
 			    $trailer = "\n    error while copying";
