@@ -1,3 +1,8 @@
+2001-05-04  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>
+
+	* automake.in ($pkgdata_dir): New.
+	(&require_file_internal): Use it.
+
 2001-05-03  Akim Demaille  <akim@epita.fr>
 
 	Case insensitive FS choke on Automake/ vs automake.
